# chirp

./: .gitattributes  .gitignore  AI_USAGE.md  CMakeLists.txt  LICENSE  README.md  report.json  test_basic.chirp
.github/workflows/: ci.yml
benchmarks/: README.md  run_bench.py
benchmarks/block_scope/: script.chirp  script.py
benchmarks/closures/: script.chirp  script.py
benchmarks/fibonacci/: script.chirp
benchmarks/startup/: script.chirp
bootstrap-interpreter/: CMakeLists.txt
bootstrap-interpreter/app/: CMakeLists.txt  main.cpp
bootstrap-interpreter/lib/interpreter/include/chirp/: interpreter.h
bootstrap-interpreter/lib/interpreter/src/: value.cpp
bootstrap-interpreter/lib/interpreter/test/: test_value.cpp
bootstrap-interpreter/lib/parser/: CMakeLists.txt
bootstrap-interpreter/lib/parser/include/chirp/: parser.h
bootstrap-interpreter/lib/parser/src/: ast_printer.cpp  lexer.cpp  parser.cpp
bootstrap-interpreter/lib/parser/test/: CMakeLists.txt  test_lexer.cpp  test_parser.cpp
docs/: chirp_design_context.md  motivation.md
docs/spec/: 00_introduction.md  01_derivation.md  02_core.md  03_machine.md  04_lexical.md  05_grammar.md
docs/user_guide/: 00_introduction.md  01_sets.md  02_values_and_bindings.md  03_functions_and_control_flow.md  04_structs_enums_and_match.md  05_traits.md
drafts/: 04_computation.md  05_lexical.md  06_traits_and_implementations.md  misc_notes.md  pointers.md
examples/: README.md  lexer.chirp  parser.chirp
interpreter/: CMakeLists.txt  README.md  lexer.chirp  parser.chirp
interpreter/app/: main.cpp
interpreter/lib/backend/: CMakeLists.txt
interpreter/lib/backend/include/chirp/: backend.h
interpreter/lib/bigint/: CMakeLists.txt
interpreter/lib/bigint/include/chirp/: bigint.h
interpreter/lib/bigint/src/: bigint.cpp
interpreter/lib/bigint/test/: CMakeLists.txt  test_bigint.cpp
interpreter/lib/frontend/: CMakeLists.txt
interpreter/lib/frontend/include/chirp/: frontend.h
interpreter/lib/frontend/src/: ast_printer.cpp  lexer.cpp  literal_decode.cpp  parser.cpp
interpreter/lib/frontend/test/: CMakeLists.txt  test_lexer.cpp  test_parser.cpp
interpreter/lib/interpreter/: CMakeLists.txt
interpreter/lib/interpreter/include/chirp/: binding.h  interpreter.h  type.h  value.h
interpreter/lib/interpreter/src/: evaluator.cpp  interpreter_internal.h  value.cpp  value.h
interpreter/lib/interpreter/test/: CMakeLists.txt  test_value.cpp
interpreter/lib/vm/: CMakeLists.txt
interpreter/lib/vm/include/chirp/: vm.h  vm_session.h
interpreter/lib/vm/src/: Binding.h  Trait.cpp  Trait.h  Value.cpp  Value.h  bindings_table.h  compiler.cpp  compiler.h  compute_unit.h  evaluator.cpp  evaluator.h  intrinsics.cpp  intrinsics.h  nature.cpp  nature.h  opcodes.h  program_unit.h  traits_table.cpp  traits_table.h  value.h  vm.cpp  vm_accessor.h  vm_impl.h  vm_session.cpp
interpreter/lib/vm/test/: CMakeLists.txt  test_vm.cpp
scripts/: README.md  test_conformance.py
spec/: 00_introduction.md  01_derivation.md  01_the_story.md  02_core.md  02_the_core.md  03_machine.md  03_the_machine.md  04_lexical.md  05_grammar.md
tests/: 01_hello_world.chirp  02_basic_math.chirp  03_bool_and_set.chirp  04_constraint_error.chirp  04_type_error.chirp  05_let_int_binding.chirp  08_block_tail_values.chirp  09_if_behavior.chirp  10_string_escapes.chirp  12_lambda_multiple_args.chirp  16_lambda_return_constraint_error.chirp  17_lambda_arity_error.chirp  18_named_args_basic.chirp  19_named_args_reordered.chirp  23_named_args_duplicate_parameter.chirp  README.md  run_tests.py
tests/binding/: assignment_constraint_error.chirp  boot_bool_shadow_error.chirp  boot_undecided_shadow_error.chirp  constraint_error.chirp  contextual_modifier_identifiers.chirp  final_shadow_error.chirp  let_int.chirp  non_final_shadowing.chirp
tests/boot/: drop_anonymous_impl.chirp  drop_assignment_overwrites_old_value.chirp  drop_reverse_declaration_order.chirp  drop_scope_exit.chirp  drop_trait.chirp  implement_set_anonymous_missing_field_error.chirp  int64_alias.chirp  intrinsics.chirp  mint.chirp  trait.chirp  trait_duplicate_implementation_error.chirp  trait_interface_must_be_set_error.chirp  unique_copy_error.chirp  unique_trait.chirp  (+4 more)
(+266 files in other folders)
